update user service to match notif